buildscript {
  repositories {
    mavenCentral()
    gradlePluginPortal()
    mavenLocal()
    google()
    maven { url = 'https://central.sonatype.com/repository/maven-snapshots/' }
  }
  dependencies {
  }
}

plugins {
  id 'com.diffplug.spotless' version '6.25.0' apply false
}

allprojects {
  apply plugin: 'eclipse'
  apply plugin: 'idea'

  idea {
    module {
      outputDir = file('build/classes/java/main')
      testOutputDir = file('build/classes/java/test')
    }
  }
}

configure(subprojects) {
  apply plugin: 'java-library'
  apply plugin: 'checkstyle'
  apply plugin: 'com.diffplug.spotless'

  java.sourceCompatibility = 8

  tasks.register('generateAssetList') {
    inputs.dir("${project.rootDir}/assets/")
    File assetsFolder = new File("${project.rootDir}/assets/")
    File assetsFile = new File(assetsFolder, "assets.txt")
    assetsFile.delete()

    fileTree(assetsFolder).collect { assetsFolder.relativePath(it) }.sort().each {
      assetsFile.append(it + "\n")
    }
  }

  processResources.dependsOn 'generateAssetList'

  compileJava {
    options.incremental = true
  }

  checkstyle {
    toolVersion = '13.4.0'
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
  }

  tasks.withType(Checkstyle).configureEach {
    reports {
      xml.required = false
      html.required = true
    }
    exclude '**/lwjgl3/**'
  }
}

subprojects {
  version = "$projectVersion"
  ext.appName = 'Lord of Nothing'

  repositories {
    mavenCentral()
    mavenLocal()
    maven { url = 'https://central.sonatype.com/repository/maven-snapshots/' }
    maven { url = 'https://jitpack.io' }
  }
}

eclipse.project.name = 'Lord of Nothing' + '-parent'
